# base64sve

./: .gitignore  CMakeLists.txt  README.md
lib/include/: base64sve.h
lib/src/: base64_decoding.c  base64_encoding.c  base64sve.c
src/: base64.c
